force-app/main/default/objects/custom_create52__c/custom_create52__c.object-meta.xml
<CustomObject>
    <label>Custom created object52</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects52</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>