force-app/main/default/objects/custom_create52__c/fields/custom_create_52field540__c.field-meta.xml
<CustomField>
    <fullName>custom_create_52field540__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 52field540</label>
    <type>Checkbox</type>
</CustomField>