force-app/main/default/objects/custom_create52__c/fields/custom_create_52field595__c.field-meta.xml
<CustomField>
    <fullName>custom_create_52field595__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 52field595</label>
    <type>Checkbox</type>
</CustomField>